--- a/circleci/config
+++ b/circleci/config
@@ -7,12 +7,14 @@ machine:
         ANDROID_HOME: /usr/local/android-sdk-linux
 
 dependencies:
+    pre:
+      - echo y | android update sdk --no-ui --all --filter "platform-tools, tools"
+      - echo y | android update sdk --no-ui --all --filter "android-26, build-tools-26.1.0"
+      - echo y | android update sdk --no-ui --all --filter "extra-android-m2repository"
+      - echo y | android update sdk --no-ui --all --filter "extra-android-support"
     override:
         - echo y | android update sdk --no-ui --all --filter tools,platform-tools,build-tools-26.1.0,android-26,extra-google-m2repository,extra-google-google_play_services,extra-android-support
         - ANDROID_HOME=/usr/local/android-sdk-linux ./gradlew dependencies
-        - run:
-             name: Approve license for build tools
-             command: (echo y; echo y; echo y; echo y; echo y; echo y) | $ANDROID_HOME/tools/bin/sdkmanager --licenses
 
 
 test:
