--- a/circleci/config
+++ b/circleci/config
@@ -8,6 +8,7 @@ machine:
 
 dependencies:
     pre:
+      - chmod +x gradlew
       - echo y | android update sdk --no-ui --all --filter "platform-tools, tools"
       - echo y | android update sdk --no-ui --all --filter "android-26, build-tools-26.0.2"
       - echo y | android update sdk --no-ui --all --filter "extra-android-m2repository"
