--- a/circleci/config
+++ b/circleci/config
@@ -8,11 +8,7 @@ machine:
 
 dependencies:
     pre:
-      - chmod +x gradlew
-      - echo y | android update sdk --no-ui --all --filter "platform-tools, tools"
-      - echo y | android update sdk --no-ui --all --filter "android-26, build-tools-26.0.2"
-      - echo y | android update sdk --no-ui --all --filter "extra-android-m2repository"
-      - echo y | android update sdk --no-ui --all --filter "extra-android-support"
+      - yes | sdkmanager --licenses && sdkmanager --update
     override:
         - echo y | android update sdk --no-ui --all --filter tools,platform-tools,build-tools-26.0.2,android-26,extra-google-m2repository,extra-google-google_play_services,extra-android-support
         - ANDROID_HOME=/usr/local/android-sdk-linux ./gradlew dependencies
