--- a/circleci/config
+++ b/circleci/config
@@ -6,6 +6,9 @@ jobs:
       - image: circleci/android:api-25-alpha
     environment:
       JVM_OPTS: -Xmx3200m
+    dependencies:
+        override:
+          - echo y | android update sdk --no-ui --all --filter build-tools-26.0.2,android-26
     steps:
       - checkout
       - restore_cache:
