--- a/circleci/config
+++ b/circleci/config
@@ -10,7 +10,9 @@ jobs:
         override:
           - echo y | android update sdk --no-ui --all --filter build-tools-26.0.2,android-26
     steps:
-      - checkout
+      checkout:
+      post:
+        - cp -r licenses/. $ANDROID_HOME/licenses
       - restore_cache:
           key: jars-{{ checksum "build.gradle" }}-{{ checksum  "app/build.gradle" }}
       - run:
