--- a/circleci/config
+++ b/circleci/config
@@ -2,8 +2,6 @@ version: 2
 jobs:
   build:
     working_directory: ~/code
-    docker:
-      - image: circleci/android:api-25-alpha
     environment:
       JVM_OPTS: -Xmx3200m
       GRADLE_OPTS: '-Dorg.gradle.parallel=false -Dorg.gradle.daemon=false -Dorg.gradle.jvmargs="-Xmx1560m -XX:+HeapDumpOnOutOfMemoryError"'
@@ -11,9 +9,11 @@ jobs:
       REVIEWDOG_VERSION: 0.9.3
     dependencies:
       pre:
+        - ( sleep 5 && while [ 1 ]; do sleep 1; echo y; done ) | android update sdk --no-ui --all --filter "tools,android-26,build-tools-26.0.0,platform-tools,android-26,extra-google-m2repository,extra-android-m2repository,extra-android-support,extra-google-google_play_services"
         - git fetch origin # sometimes circleci fail to fetch branches correctly, so fetch them expressly
         - echo y | android -s update sdk -u -a -t "tools" # update Android SDK that includes sdkmanager(1)
         - mkdir -p $ANDROID_HOME/licenses
+        - cp -r licenses/. $ANDROID_HOME/licenses
         - echo -e "8933bad161af4178b1185d1a37fbf41ea5269c55" > $ANDROID_HOME/licenses/android-sdk-license
         - echo -e "84831b9409646a918e30573bab4c9c91346d8abd" > $ANDROID_HOME/licenses/android-sdk-preview-license
         - $ANDROID_HOME/tools/bin/sdkmanager "platform-tools" "extras;android;m2repository" "extras;google;m2repository"
@@ -23,9 +23,6 @@ jobs:
   override:
     - ./gradlew app:dependencies
     steps:
-      checkout:
-      post:
-        - cp -r licenses/. $ANDROID_HOME/licenses
       - restore_cache:
           key: jars-{{ checksum "build.gradle" }}-{{ checksum  "app/build.gradle" }}
       - run:
