--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -6,35 +6,23 @@ jobs:
       - image: circleci/android:api-25-alpha
     environment:
       JVM_OPTS: -Xmx3200m
-      ADB_INSTALL_TIMEOUT: 10
-      TERM: dumb
     steps:
       - checkout
       - restore_cache:
           key: jars-{{ checksum "build.gradle" }}-{{ checksum  "app/build.gradle" }}
+#      - run:
+#         name: Chmod permissions #if permission for Gradlew Dependencies fail, use this.
+#         command: sudo chmod +x ./gradlew
       - run:
           name: Download Dependencies
-          command: ./gradlew clean androidDependencies
+          command: ./gradlew androidDependencies
       - save_cache:
           paths:
             - ~/.gradle
           key: jars-{{ checksum "build.gradle" }}-{{ checksum  "app/build.gradle" }}
       - run:
-          name: Install Android dependencies
-          command: |
-            sdkmanager "platform-tools"
-            sdkmanager "platforms;android-15"
-            sdkmanager "platforms;android-21"
-            sdkmanager "platforms;android-22"
-            sdkmanager "platforms;android-25"
-            sdkmanager "build-tools;24.0.3"
-            sdkmanager "extras;android;m2repository"
-            sdkmanager "extras;google;m2repository"
-            sdkmanager "extras;google;google_play_services"
-            sdkmanager "system-images;android-21;default;armeabi-v7a"
-     - store_artifacts:
-          path: app/build/outputs
-          destination: outputs
+          name: Run Tests
+          command: ./gradlew lint test
       - store_artifacts:
           path: app/build/reports
           destination: reports
