--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -28,3 +28,8 @@ jobs:
           destination: reports
       - store_test_results:
           path: app/build/test-results
+  deployment:
+    staging:
+      branch: master
+      heroku:
+        appname: circle-ci
