--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -28,10 +28,9 @@ jobs:
           destination: reports
       - store_test_results:
           path: app/build/test-results
-      deployment:
-                staging:
-                    branch: master
-                    heroku:
-                      appname: circle-ci
-
+deployment:
+  beta:
+    branch: master
+    commands:
+      - ./gradlew release --console=plain
 
