--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -28,9 +28,7 @@ jobs:
           destination: reports
       - store_test_results:
           path: app/build/test-results
-deployment:
-  beta:
-    branch: master
-    commands:
-      - ./gradlew release --console=plain
+      - store_artifacts:
+                path: app/build/outputs/apk/
+                destination: apks/
 
