--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -5,7 +5,7 @@ jobs:
     docker:
       - image: circleci/android:api-25-alpha
     environment:
-      JVM_OPTS: -Xmx3200m
+      JVM_OPTS: -Xmx4G
     steps:
       - checkout
       - restore_cache:
@@ -29,6 +29,17 @@ jobs:
       - store_test_results:
           path: app/build/test-results
       - store_artifacts:
-                path: app/build/outputs/apk/
-                destination: apks/
-
+          path: app/build/outputs/apk/
+          destination: apks/
+#      - deploy:
+#          name: "Deploy to Fabric 🎉🎉"
+#          command: |
+#            echo "Branch: ${CIRCLE_BRANCH} , PR: ${CIRCLE_PULL_REQUEST}"
+#            if [ "${CIRCLE_BRANCH}" == "develop" -o "${CIRCLE_PULL_REQUEST}" != "" ]; then
+#              ./gradlew crashlyticsUploadDistributionDevelopmentRelease --stacktrace --debug --no-daemon
+#            fi
+#
+#            release=$(cut -c-7 <<< "${CIRCLE_BRANCH}")
+#            if [ "$release" == "release"]; then
+#              ./gradlew crashlyticsUploadDistributionProductionRelease --stacktrace --debug --no-daemon
+#            fi
